@@ -1,45 +1,3 @@
-plugins {
-    id 'org.flywaydb.flyway' version '5.2.4'
-}
-
-apply plugin: 'java'
-apply plugin: 'idea'
-apply plugin: 'org.springframework.boot'
-apply plugin: 'io.spring.dependency-management'
-
-group = 'com.genius.primavera'
-version = '0.0.1-SNAPSHOT'
-sourceCompatibility = '12'
-
-configurations {
-    compileOnly {
-        extendsFrom annotationProcessor
-    }
-}
-
-repositories {
-    mavenCentral()
-}
-
-tasks.withType(JavaCompile).each {
-    it.options.compilerArgs.add('--enable-preview')
-}
-
-test {
-    jvmArgs(['--enable-preview'])
-}
-
-bootRun {
-    main = 'com.genius.primavera.PrimaveraApplication'
-    jvmArgs(['--enable-preview'])
-}
-
-flyway {
-    url = 'jdbc:mariadb://localhost:3306/primavera'
-    user = 'primavera'
-    password = 'primavera'
-}
-
 dependencies {
     compile('org.springframework.boot:spring-boot-starter-web') {
         exclude module: "spring-boot-starter-tomcat"
